--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div id="music">
         <!-- <h2>Music work</h2> -->
-        <img src = "images/Cover.jpg" alt="Cover" style="width:250px;height:140px">
+        <img src = "Cover.jpg" alt="Cover" style="width:250px;height:140px">
         <h2>take1 - mixtape</h2>
         <p>A journey and collage<br>of soundscapes and<br> electronic beats
         </p>
@@ -57,7 +57,7 @@
     <div id="insta">
         <h2>Follow Me on<br>Instagram</h2>
         <a href="https://www.instagram.com/alex_arditti/" target="_blank">
-            <img src="images/insta_lgo.png" alt="instagram" style="width:70px;height:70px" >
+            <img src="insta_lgo.png" alt="instagram" style="width:70px;height:70px" >
         </a>    
     </div> 
 
@@ -67,7 +67,7 @@
     <div id="twitter">
         <h2>Follow Me on<br>twitter</h2>
         <a href="https://twitter.com/Alex_Arditti" target="_blank">
-            <img src="images/twitter_logo.png" alt="twitter" style="width:70px;height:70px" >
+            <img src="twitter_logo.png" alt="twitter" style="width:70px;height:70px" >
         </a>
     </div> 
 </body>
