--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p>A journey and collage<br>of soundscapes and<br> electronic beats
         </p>
         <audio controls>
-            <source src="Audio/arditti - take1 - 01 arditti - take1 (mixtape).mp3" type="audio/mpeg">
+            <source src="arditti - take1 - 01 arditti - take1 (mixtape).mp3" type="audio/mpeg">
         </audio>
         <p>
             Download the mixtape<a href="https://arditti.bandcamp.com/releases" target="_blank"> Here</a>
